continued working on the about page, noticed some spacing issues on responsivle styles

--- a/assets/stylesheets/sass/custom.sass
+++ b/assets/stylesheets/sass/custom.sass
@@ -155,9 +155,10 @@ p.list-head
 
 /* Map Section */
 
-.map
-	height: 547px
-	background-size: contain
+
+#places
+
+	.map
 	background-repeat: no-repeat
 	text-indent: -5000px
 	background-image: url("http://content.designbyagent.com/wp-content/uploads/2014/05/sc-map-places-shadow.jpg")
